--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,62 @@
         <img class="" src="./img/player.png" alt="">
     </section>
 
+    <section class="bg-[url(./img/bg-4.png)] bg-cover bg-center">
+
+        <h3 class="text-4xl font-bold leading-9 text-center text-white pt-11">
+            Наши партнеры 
+        </h3>
+
+        <div class="grid grid-flow-row pl-5 pr-5 pt-7 gap-y-[2px]">
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">Оптовые компании по продаже<br> дверей
+                </p>
+                <img src="./img/cards/card1.png" alt="">
+            </div>
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">
+                    Дверные магазины
+                </p>
+                <img class="mr-5" src="./img/cards/card2.png" alt="">
+            </div>
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">
+                    Компании - застройщики
+                </p>
+                <img src="./img/cards/card3.png" alt="">
+            </div>
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">
+                    Строительные фирмы
+                </p>
+                <img src="./img/cards/card4.png" alt="">
+            </div>
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">
+                    Смежные организация с отделом снабжения 
+                </p>
+                <img src="./img/cards/card3.png" alt="">
+            </div>
+            <div class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
+                <p class="self-center text-lg font-bold leading-5 text-white ml-7">
+                    Дизайнеры, проектные<br> бюро
+                </p>
+                <img class="mr-5" src="./img/cards/card2.png" alt="">
+            </div>
+
+            <p class="pb-8 mt-10 text-xl leading-7 text-center text-white">
+                Мы производим входные двери «Leras» в рамках наших коллекций, а также по индивидуальным проектам
+            </p>
+        </div>
+        
+
+
+        
+
+
+
+    </section>
+
 
 
 
