--- a/src/index.html
+++ b/src/index.html
@@ -424,54 +424,61 @@
     </section>
 
     <section class="grid grid-flow-row pl-5 pr-5 gap-y-5 pt-7">
-        <h5 class="text-4xl font-bold leading-9">
-            Специальные диллерские условия
-        </h5>
 
-        <p class="text-lg leading-6 text-semidark">
+        <div class="flex flex-row text-4xl font-bold leading-9 md:pl-16 gap-x-10">
+
+            <img class="hidden md:block" src="./img/svg/cross.svg" alt="">
+
+            <h5 class="">
+                Специальные<br class="hidden md:block"> диллерские условия
+            </h5>
+        </div>
+
+
+        <p class="text-lg leading-6 md:pl-16 text-semidark">
             Мы нацелены на получение прибыли наших дилеров<br><br>
             Поэтому мы разработали специальные алгоритмы работы,
             которые позволяют получать прибыль вам с первого месяца работы
         </p>
 
-        <div class="flex flex-row text-xl leading-7 pb-7 text-semidark gap-x-5">
+        <div class="flex flex-row text-xl leading-7 md:pl-16 pb-7 text-semidark gap-x-5">
             <p>Cвязаться с нами</p>
             <img src="./img/svg/orange_button.svg" alt="">
         </div>
     </section>
 
-    <section class="grid grid-flow-row pt-10 pl-5 pr-5 gap-y-6">
+    <section class="grid grid-flow-row pt-10 pl-5 pr-5 md:pl-10 md:grid-cols-2 md:grid-rows-fit5 gap-y-6">
         <h6 class="text-4xl font-bold leading-8 text-dark">
             Стать партнером
         </h6>
 
-        <div class="pb-3 border-b-2 border-gray border-opacity-30">
+        <div class="pb-3 border-b-2 md:col-start-1 md:col-end-3 md:row-start-2 border-gray border-opacity-30">
 
-            <input type="text" name="" id="" class="placeholder:leading-5 placeholder:text-black placeholder:text-lg"
+            <input type="text" name="" id="" class=" placeholder:leading-5 placeholder:text-black placeholder:text-lg"
                 placeholder="Имя">
         </div>
 
 
 
-        <div class="pb-3 border-b-2 border-gray border-opacity-30">
+        <div class="pb-3 border-b-2 md:row-start-3 border-gray md:mr-6 border-opacity-30">
             <input type="email" name="" id="" class="placeholder:leading-5 placeholder:text-black placeholder:text-lg"
                 placeholder="E-mail">
         </div>
 
 
 
-        <div class="pb-3 border-b-2 border-gray border-opacity-30">
+        <div class="pb-3 border-b-2 md:row-start-3 border-gray border-opacity-30">
             <input type="number" name="" id="" class="placeholder:leading-5 placeholder:text-black placeholder:text-lg"
                 placeholder="Номер телефона">
         </div>
 
-        <p class="text-sm leading-4 text-more-gray">
+        <p class="text-sm leading-4 text-more-gray md:relative md:right-44 md:row-start-4 md:col-start-2">
             Нажимая кнопку «Связаться», я даю свое согласие на обработку моих персональных данных.
         </p>
 
-        <button type="submit" class="text-lg leading-5 bg-orange h-11">Связаться</button>
+        <button type="submit" class="text-lg leading-5 bg-orange md:w-36 md:row-start-4 h-11">Связаться</button>
 
-        <div class="grid grid-flow-col pb-6 md:pb-32 ">
+        <div class="grid grid-flow-col pb-6 md:pb-32 md:row-start-5 md:col-start-1 md:col-end-3 ">
             <p class="text-base leading-5 text-gray">© 2000—2019, LERAS</p>
             <p class="text-base leading-5 text-right text-gray">Разработка сайта LYNXOFT</p>
         </div>
