--- a/src/index.html
+++ b/src/index.html
@@ -70,12 +70,6 @@
     <header class="bg-[url(./img/bg-1.png)] bg-center bg-cover h-[568px] md:h-[1024px]  ">
 
 
-        <!-- Чекни сайт Leras чтоб не забыть как сделать менюшку -->
-
-
-        <!-- А ЕЩЕ ЗАЙМИСЬ НАКОНЕЦ РЕАКТОМ БЛЯ, ВСЕ РАВНО СИДИШЬ НИХУЯ НЕ ДЕЛАЕШЬ -->
-
-
         <img src="./img/svg/Logo.svg" alt="" class="pt-24 md:pt-[300px] pls:pt-40 pls:mr-0 pls:ml-9 mx-auto">
 
         <p class="pt-8 text-3xl font-bold leading-6 text-center text-white pls:text-left pls:mr-0 pls:ml-9">Производство и <br class="pls:hidden">оптовая<br class="hidden pls:block"> продажа стальных
@@ -130,7 +124,7 @@
 
                 <img src="./img/svg/button_down.svg" alt="">
             </button>
-            <!-- self strech чет хуйня -->
+            <!-- self strech чет не то -->
         </div>
 
     </main>
@@ -220,7 +214,7 @@
 
                 <img src="./img/svg/button_down.svg" alt="">
             </button>
-            <!-- self strech чет хуйня -->
+            <!-- self strech чет не то -->
         </div>
     </section>
 
