--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <!-- bottom menu -->
     <div
         class=" grid-flow-col z-50 items-stretch w-full px-8 pls:px-0 my-0 bottom-0 text-base leading-[18px] font-bold text-white h-16 fixed text-right hidden md:grid bg-dark">
-        
+
         <button class="z-50 items-center justify-center hidden border-r-2 border-r-semidark pls:flex bg-dark">
             <img class="" src="./img/svg/button_up.svg" alt="">
         </button>
@@ -57,28 +57,36 @@
         <button class="pl-8 text-left">Выгодное<br>
             сотрудничество</button>
 
-            <img class="hidden pls:block justify-self-end" src="./img/vidosik.png" alt="">
-            <!-- Сделаем вид, что это видео -->
+        <img class="hidden pls:block justify-self-end" src="./img/vidosik.png" alt="">
+        <!-- Сделаем вид, что это видео -->
     </div>
 
     <!-- return button -->
-        <button class="fixed z-50 items-center justify-center hidden w-12 h-12 pls:hidden bottom-24 md:flex bg-dark left-8">
-            <img class="" src="./img/svg/button_up.svg" alt="">
-        </button>
+    <button class="fixed z-50 items-center justify-center hidden w-12 h-12 pls:hidden bottom-24 md:flex bg-dark left-8">
+        <img class="" src="./img/svg/button_up.svg" alt="">
+    </button>
+
+
+    <header class="bg-[url(./img/bg-1.png)] bg-center pls:items-center  bg-cover pls:grid pls:grid-flow-col h-[568px] md:h-[1024px] pls:justify-items-stretch pls:h-auto pls:gap-x-12  ">
+
+
+        <div class="pt-24 md:pt-[300px] pls:pt-0 pls:mr-0 pls:ml-9 mx-auto pls:mx-0">
+            <img src="./img/svg/Logo.svg" alt="" class="mx-auto pls:mx-0">
+
+            <p class="pt-8 text-3xl font-bold leading-6 text-center text-white pls:text-left ">Производство
+                и <br class="pls:hidden">оптовая<br class="hidden pls:block"> продажа стальных
+                входных<br>дверей</p>
+            <p class="pt-8 text-lg leading-6 text-center text-white pls:text-left ">Производственной
+                компании «МеталлИнвест»</p>
     
+            <button class="block w-12 h-12 mx-auto mt-8 bg-white pls:hidden md:mt-12">
+                <img src="./img/svg/button_down.svg" alt="">
+            </button>
+        </div>
 
-    <header class="bg-[url(./img/bg-1.png)] bg-center bg-cover h-[568px] md:h-[1024px]  ">
+        <img class="hidden pls:block" src="./img/header_image.png" alt="">
 
 
-        <img src="./img/svg/Logo.svg" alt="" class="pt-24 md:pt-[300px] pls:pt-40 pls:mr-0 pls:ml-9 mx-auto">
-
-        <p class="pt-8 text-3xl font-bold leading-6 text-center text-white pls:text-left pls:mr-0 pls:ml-9">Производство и <br class="pls:hidden">оптовая<br class="hidden pls:block"> продажа стальных
-            входных<br>дверей</p>
-        <p class="pt-8 text-lg leading-6 text-center text-white pls:mr-0 pls:text-left pls:ml-9">Производственной компании «МеталлИнвест»</p>
-
-        <button class="block w-12 h-12 mx-auto mt-8 bg-white pls:hidden md:mt-12">
-            <img src="./img/svg/button_down.svg" alt="">
-        </button>
 
     </header>
 
@@ -264,7 +272,7 @@
 
     </section>
 
-    <section class="bg-[url(./img/bg-3.png)] bg-cover bg-center">
+    <section class="bg-[url(./img/bg-3.png)] pls:bg-[url(./img/bg3lg.png)] pls:grid pls:grid-flow-col pls:overflow-hidden bg-cover bg-center">
         <div class="grid grid-flow-row pl-5 pr-5 gap-y-5 pt-7">
             <h2 class="text-4xl font-bold leading-8 text-white">Новые технологии<br>и инновационные<br>решения</h2>
 
@@ -286,21 +294,21 @@
             <img class src=" ./img/hz.png" alt="">
 
 
-            <img class="" src="./img/player.png" alt="">
+            <img class="pls:hidden" src="./img/player.png" alt="">
         </div>
 
     </section>
 
 
 
-    <section class="bg-[url(./img/bg-4.png)] bg-cover bg-center">
+    <section class="bg-[url(./img/bg-4.png)]  bg-cover bg-center">
 
         <h3 class="text-4xl font-bold leading-9 text-center text-white pt-11">
             Наши партнеры
         </h3>
 
         <div
-            class="grid grid-flow-row pl-5 md:grid-cols-fit2 pr-5 pt-7 gap-y-[2px] justify-items-center md:justify-center">
+            class="grid grid-flow-row pl-5 pls:grid-cols-fit3 md:grid-cols-fit2 pr-5 pt-7 gap-y-[2px] justify-items-center md:justify-center">
             <div
                 class="bg-[url(./img/bg-1.png)] bg-center bg-cover flex flex-row w-[279px] h-[120px] items-end justify-between">
                 <p class="self-center text-lg font-bold leading-5 text-white ml-7">Оптовые компании по продаже<br>
@@ -344,7 +352,7 @@
                 <img class="mr-5" src="./img/cards/card2.png" alt="">
             </div>
 
-            <p class="pb-8 mt-10 text-xl leading-7 text-center text-white md:col-start-1 md:col-end-3">
+            <p class="pb-8 mt-10 text-xl leading-7 text-center text-white md:col-start-1 md:col-end-3 pls:col-end-4">
                 Мы производим входные двери «Leras» в рамках наших коллекций, а также по индивидуальным проектам
             </p>
         </div>
