now everything looks "fine"

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
 
     </header>
 
-    <main class="bg-[url(./img/bg-2.png)] bg-cover min-h-screen bg-center lg:items-stretch
+    <main class="bg-[url(./img/bg-2.png)] bg-cover  grid grid-flow-row content-between min-h-screen bg-center lg:items-stretch
     lg:grid lg:grid-flow-col
     lg:justify-items-stretch lg:gap-x-12">
 
@@ -120,7 +120,9 @@
         </div>
 
         <div
-            class="bg-[url(./img/hitech.png)]  lg:h-auto lg:col-start-1 lg:w-[50vw] h-44 md:h-[436px] bg-no-repeat bg-center bg-cover grid grid-flow-col justify-between items-center justify-items-center mt-8">
+            class="bg-[url(./img/hitech.png)] lg:h-screen lg:col-start-1 lg:w-[50vw] h-44 md:h-[436px] bg-no-repeat bg-center bg-cover grid grid-flow-col justify-between items-center justify-items-center mt-8">
+
+            
 
             <button class="w-12 h-12 rotate-90 bg-white ">
 
@@ -185,7 +187,7 @@
 
     </section>
 
-    <section class="min-h-screen lg:grid lg:grid-flow-col lg:justify-items-stretch lg:gap-x-12">
+    <section class="grid content-between min-h-screen grid-flow-row lg:grid lg:grid-flow-col lg:justify-items-stretch lg:gap-x-12">
         <div class="grid grid-flow-row pl-5 pr-5 gap-y-5 pt-7">
 
             <p class="text-lg leading-4 ">Серия — Премьер</p>
@@ -210,7 +212,7 @@
         </div>
 
         <div
-            class="bg-[url(./img/hitech.png)] lg:h-auto lg:w-[50vw] h-44 bg-no-repeat bg-center md:h-[436px] bg-cover grid grid-flow-col justify-between items-center justify-items-center mt-8">
+            class="bg-[url(./img/hitech.png)] lg:w-[50vw] lg:h-screen h-44 bg-no-repeat bg-center md:h-[436px] bg-cover grid grid-flow-col justify-between items-center justify-items-center mt-8">
 
             <button class="w-12 h-12 rotate-90 bg-white ">
 
@@ -440,7 +442,7 @@
 
     </section>
 
-    <section class="grid min-h-screen grid-flow-row pl-5 pr-5 gap-y-5 pt-7">
+    <section class="grid items-baseline min-h-[50vh] grid-flow-row pl-5 pr-5 grid-rows-fit3 gap-y-5 pt-7">
 
         <div class="flex flex-row text-4xl font-bold leading-9 md:pl-16 gap-x-10">
 
@@ -464,7 +466,7 @@
         </div>
     </section>
 
-    <section class="grid min-h-screen grid-flow-row pt-10 pl-5 pr-5 md:pl-10 md:grid-cols-2 md:grid-rows-fit5 gap-y-6">
+    <section class="grid min-h-[50vh] grid-flow-row pt-10 pl-5 pr-5 md:pl-10 md:grid-cols-2 md:grid-rows-fit5 gap-y-6">
         <h6 class="text-4xl font-bold leading-8 text-dark">
             Стать партнером
         </h6>
